--- a/无脑码农个人文档.md
+++ b/无脑码农个人文档.md
@@ -5,3 +5,27 @@
 [超链接](http://www.iserfs.com "无脑码农博客")
 
 kankan
+
+**打字声音** 可以使用这样的文档格式
+
+---
+
+_ _ _
+
+* haha 
+* ok
+
+
+* ***[cocos2d-x适配](http:://www.iserfs.com)***
+
+	* [文章内容](http:://www.isefrfs.com)
+	
+* [zero]()
+
+![Mou icon](http://25.io/mou/Mou_128.png)
+
+
+> Right angle brackets &gt; are use for block quotes,
+
+An email<1985zero@16c.com> link.
+
